tests/baselines/reference/typeInferenceSelfIndexingTypeParameter2.errors.txt
typeInferenceSelfIndexingTypeParameter2.ts(8,3): error TS2322: Type 'string' is not assignable to type 'never'.
typeInferenceSelfIndexingTypeParameter2.ts(9,3): error TS2322: Type 'number' is not assignable to type 'never'.


==== typeInferenceSelfIndexingTypeParameter2.ts (2 errors) ====
    declare function f<T>(
      arg: {
        [K in keyof T]: T[K][keyof T[K]];
      }
    ): T;
    
    const res1 = f({
      a: "hello",
      ~
!!! error TS2322: Type 'string' is not assignable to type 'never'.
!!! related TS6500 typeInferenceSelfIndexingTypeParameter2.ts:8:3: The expected type comes from property 'a' which is declared here on type '{ a: never; b: never; }'
      b: 100,
      ~
!!! error TS2322: Type 'number' is not assignable to type 'never'.
!!! related TS6500 typeInferenceSelfIndexingTypeParameter2.ts:9:3: The expected type comes from property 'b' which is declared here on type '{ a: never; b: never; }'
    });
    